# ginko_ros

./: .gitignore  README.md
foot_grounding/: .project  CMakeLists.txt  package.xml  package.xml.nobuild
gazebo_imu_accel_filter/: CMakeLists.txt  package.xml
gazebo_imu_accel_filter/include/: gazebo_imu_accel.h  main.h
gazebo_imu_accel_filter/launch/: imu_filter.launch
gazebo_imu_accel_filter/src/: gazebo_imu_accel.cpp  main.cpp
ginko_battle_planner/: .project  CMakeLists.txt  package.xml
ginko_battle_planner/cfg/: sample_params.yaml
ginko_battle_planner/include/: battle_planner.h  main.h
ginko_battle_planner/launch/: battle_planner.launch
ginko_battle_planner/src/: .battle_planner.cpp.swp  battle_planner.cpp  main.cpp
ginko_bringup/: .project  CMakeLists.txt  package.xml
ginko_bringup/config/: detect_human_area.yaml  detect_robot_laying_area.yaml  detect_robot_standing_area.yaml  urg_inside_ring.yaml  urg_l.yaml  urg_r.yaml
ginko_bringup/launch/: ginko.launch  ginko02.launch  ginko_state_and_goal.launch  local.launch  pcl.launch  remote.launch  tftest.launch
ginko_bringup/launch/initialize/: gazebo.launch  gazebo_small.launch  real.launch
ginko_bringup/launch/remote/: rgbd_compress.launch  rgbd_decompress.launch
ginko_bringup/launch/remote/darknet/: darknet.launch  pointcloud.launch  screenpoint.launch
ginko_bringup/launch/remote/darknet/config/: ros_realsense.yaml
ginko_bringup/launch/startup_modules/: battle.launch  realsense.launch  startup_modules.launch  startup_modules_small.launch
ginko_bringup/launch/startup_modules/modules/: footstep_odometry.launch  imu_filter.launch  laser_assembler.launch  motion_player.launch  rs_rgbd.launch  target_detector.launch  urg_filter.launch
ginko_description/: .project  CMakeLists.txt  README.md  package.xml
ginko_joint_controller/: .project  CMakeLists.txt  ginko_joint_controller.xml  package.xml
ginko_joint_controller/cfg/: servo_offsets.cfg  servo_offsets.yaml
ginko_joint_controller/include/: futaba_driver.hpp  ginko_controller.h  ginko_offsets.h  ginko_params.h  ginko_serial.h  ginko_timer.h  main.h  serial.hpp  servo_offsets.h
ginko_joint_controller/launch/: ginko_joint_controller.launch  ginko_joint_controller02.launch  ginko_jont_controller.launch
ginko_joint_controller/src/: futaba_driver.cpp  ginko_controller.cpp  ginko_offsets.cpp  ginko_serial.cpp  ginko_timer.cpp  main.cpp  serial.cpp  servo_offsets.cpp
ginko_joint_controller_gazebo/: .project  CMakeLists.txt  package.xml
ginko_joint_controller_gazebo/include/: ginko_controller_gazebo.h  ginko_params.h  main.h
ginko_joint_controller_gazebo/launch/: ginko_joint_controller.launch
ginko_joint_controller_gazebo/src/: ginko_controller_gazebo.cpp  ginko_params.cpp  main.cpp
ginko_joint_offset/: .project  CMakeLists.txt  package.xml
ginko_joint_offset/cfg/: servo_offsets.cfg  servo_offsets.yaml
ginko_joint_offset/include/: ginko_offsets.h  main.h
ginko_joint_offset/launch/: ginko_joint_offset.launch
ginko_joint_offset/src/: ginko_offsets.cpp  main.cpp
ginko_motion_player/: .project  CMakeLists.txt  package.xml
ginko_motion_player/cfg/: servo_offsets.cfg  servo_offsets.yaml
ginko_motion_player/cmake/: decision_making_parsing.cmake
ginko_motion_player/include/: ginko_definitions.h  ginko_fsm.h  ginko_motion.h  ginko_player.h
ginko_motion_player/include/motions/: atkBack.h  atkFront.h  atkLeft1.h  atkLeft2.h  atkLeftBack1.h  atkLeftBack2.h  atkRight1.h  atkRight2.h  atkRightBack1.h  atkRightBack2.h  attackLeft1.h  attackLeft2.h  attackLeftBack1.h  attackLeftBack2.h  attackRight1.h  attackRight2.h  attackRightBack1.h  attackRightBack2.h  detectHuman.h  detectRobotLaying.h  detectRobotStanding.h  moveUrg1.h  moveUrg2.h  moveUrg3.h  standing.h  turnLeft.h  turnRight.h  wakeupBack.h  wakeupFront.h  walkBack.h  walkFront.h  walkLeft.h  walkRight.h
ginko_motion_player/launch/: fsm_ginko.launch  fsm_nogui.launch  nogui.launch
ginko_motion_player/src/: ginko_player.cpp  ginko_timer.cpp
ginko_motion_player/src/fsm/: ginko_fsm.cpp  ginko_fsm_events.cpp  ginko_motion.cpp  ginko_motion_events.cpp
ginko_odom/: .project  CMakeLists.txt  package.xml
ginko_odom/include/: ginko_odom.h  main.h
ginko_odom/launch/: odometry.launch
ginko_odom/src/: ginko_odom.cpp  main.cpp
ginko_regulation_planner/: CMakeLists.txt  package.xml
ginko_regulation_planner/include/: main.h  regulation_planner.h
ginko_regulation_planner/launch/: regulation_planner.launch
ginko_regulation_planner/src/: main.cpp  regulation_planner.cpp
ginko_ros/: CMakeLists.txt  package.xml
imu_angle_correction/: .project  CMakeLists.txt  package.xml
imu_angle_correction/include/: angle_correction.h  main.h
imu_angle_correction/launch/: imu_filter.launch  publish_euler.launch
imu_angle_correction/src/: angle_correction.cpp
imu_drift_correction/: CMakeLists.txt  package.xml
imu_euler_publisher/: .project  CMakeLists.txt  package.xml
imu_euler_publisher/include/: angle_correction.h  quaternion_to_rpy.h
imu_euler_publisher/launch/: publish_euler.launch
imu_euler_publisher/src/: main.cpp  quaternion_to_rpy.cpp
joint_reconf_client/: .project  CMakeLists.txt  package.xml
joint_reconf_client/include/: ginko_offsets.h  ginko_params.h  main.h  offsets_reconf.h
joint_reconf_client/launch/: ginko_joint_offset.launch  joint_reconf_client.launch
joint_reconf_client/src/: ginko_offsets.cpp  main.cpp  offsets_reconf.cpp
roboone_ring_tf_publisher/: CMakeLists.txt  package.xml
roboone_ring_tf_publisher/include/: main.h  ring_tf_publisher.h
roboone_ring_tf_publisher/launch/: ring_edge_detector.launch  ring_tf_publisher.launch  static_tf_publishers.launch
roboone_ring_tf_publisher/src/: main.cpp  ring_tf_publisher.cpp
urg_nearest_detector/: .project  CMakeLists.txt  package.xml
urg_nearest_detector/include/: main.h  urg_nearest.h
urg_nearest_detector/launch/: human_nearest.launch  robot_laying_nearest.launch  robot_standing_nearest.launch  urg_nearest.launch
urg_nearest_detector/src/: main.cpp  urg_nearest.cpp
(+283 files in other folders)
