<?xml version="1.0"?>
<package format="2">
  <name>ginko_joint_controller</name>
  <version>0.0.1</version>
  <description>controll rs406cb joints</description>

  <maintainer email="ginko@test.org">Ginko</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>

  <export>
    <nodelet plugin="${prefix}/ginko_joint_controller.xml" />
  </export>

</package>
