<?xml version="1.0"?>
<package format="2">
  <name>imu_angle_correction</name>
  <version>0.0.1</version>
  <description>offset imu fixture</description>

  <maintainer email="ginko@test.org">Ginko</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
