<?xml version="1.0"?>
<package format="2">
  <name>imu_euler_publisher</name>
  <version>0.0.1</version>
  <description>Publish RPY euler from imu quatenion</description>

  <maintainer email="ginko@test.org">Ginko</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
