<?xml version="1.0"?>
<package format="2">
  <name>joint_reconf_client</name>
  <version>0.0.1</version>
  <description>offset joint_states and target_joints for ginko</description>

  <maintainer email="ginko@test.org">Ginko</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>

</package>
