<?xml version="1.0"?>
<package format="2">
  <name>roboone_ring_tf_publisher</name>
  <version>0.0.1</version>
  <description>Setting roboone ring's TF(center,edge,vertex)</description>

  <maintainer email="ginko@test.org">Ginko</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>
</package>
